test/data/codegen/valid/unknown_column/queries.cypher
// name: OneUnknown :one
MATCH (p:Person) RETURN foo(p.id) AS r
