test/data/codegen/invalid/out_of_c3_scope_int128/queries.cypher
// name: WideValue :one
MATCH (r:Row) RETURN r.wide
